Bug 266268 - Two last symbols of connection type name is becomes transparent
Summary: Two last symbols of connection type name is becomes transparent
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-14 06:22 UTC by RussianNeuroMancer
Modified: 2011-05-20 08:19 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example (28.16 KB, image/jpeg)
2011-02-14 06:44 UTC, RussianNeuroMancer
Details
Screenshot of new problem (144.00 KB, image/png)
2011-05-18 21:06 UTC, Christian (Fuchs)
Details
My Plasma NM (26.82 KB, image/jpeg)
2011-05-18 23:33 UTC, Lamarque V. Souza
Details

Note You need to log in before you can comment on or make changes to this bug.
Description RussianNeuroMancer 2011-02-14 06:22:09 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

Please check attached screenshot.
Probably defaut size of left part of Network Manager applet is designed for English localization. In result there is a some problem with other localiztions (with Russian for example).

Reproducible: Didn't try
Comment 1 RussianNeuroMancer 2011-02-14 06:44:23 UTC
Created attachment 57237 [details]
Example
Comment 2 Lamarque V. Souza 2011-04-16 02:03:07 UTC
Moving to the right product.
Comment 3 Alexander Potashev 2011-05-17 09:43:55 UTC
(In reply to comment #2)
> Moving to the right product.

The bug is still in the NetworkManager widget, its size should be changed according to the width of the text.

It is possible to use shorter translation in Russian here.
Comment 4 Lamarque V. Souza 2011-05-17 22:37:45 UTC
Git commit a9fafd3adf34a30778cd5bd08ab443e899974b69 by Lamarque V. Souza.
Committed on 17/05/2011 at 22:34.
Pushed by lvsouza into branch 'master'.

Try to adjust size automatically when needed.

BUG: 266268

M  +2    -5    applet/gsminterfaceconnectionitem.cpp     
M  +0    -3    applet/interfaceconnectionitem.cpp     
M  +3    -2    applet/interfacedetailswidget.cpp     
M  +1    -2    applet/interfaceitem.cpp     
M  +4    -28   applet/nmpopup.cpp     
M  +0    -1    applet/nmpopup.h     
M  +1    -2    applet/wirelessnetworkitem.cpp     

http://commits.kde.org/networkmanagement/a9fafd3adf34a30778cd5bd08ab443e899974b69
Comment 5 Lamarque V. Souza 2011-05-17 22:38:23 UTC
Git commit 2fe16f48a9c9a022cc5ced19d33af02840db6ece by Lamarque V. Souza.
Committed on 17/05/2011 at 22:34.
Pushed by lvsouza into branch 'nm09'.

Try to adjust size automatically when needed.

BUG: 266268

M  +2    -5    applet/gsminterfaceconnectionitem.cpp     
M  +0    -3    applet/interfaceconnectionitem.cpp     
M  +3    -2    applet/interfacedetailswidget.cpp     
M  +1    -2    applet/interfaceitem.cpp     
M  +4    -28   applet/nmpopup.cpp     
M  +0    -1    applet/nmpopup.h     
M  +1    -2    applet/wirelessnetworkitem.cpp     

http://commits.kde.org/networkmanagement/2fe16f48a9c9a022cc5ced19d33af02840db6ece
Comment 6 Christian (Fuchs) 2011-05-18 21:06:16 UTC
Created attachment 60129 [details]
Screenshot of new problem

The mentioned fix in git 2fe16f48a9c9a022cc5ced19d33af02840db6ece creates a different problem, the plasma pop up is way to small now, text and icons from the interface list overlap with the connection list.
Comment 7 Lamarque V. Souza 2011-05-18 23:33:52 UTC
Created attachment 60133 [details]
My Plasma NM

I am starting to think this problem depends on the Plasma theme you use. My Plasma NM screenshot is attached and you can see it Ok.

What is strange is that beside the "Enable Networking" / "Enable Wireless" label should have a space reserved for the "Enable Mobile Broadband" label. It should appear only when there is a mobile network interface but it should take up the needed space since Plasma NM start and that is not happening in your computer.
Comment 8 Lamarque V. Souza 2011-05-19 22:57:29 UTC
Git commit 43d40035ebad6b038cbef76c471ab0750f5ce796 by Lamarque V. Souza.
Committed on 19/05/2011 at 22:52.
Pushed by lvsouza into branch 'master'.

Reserve room for the wwan (AKA mobile broadband) checkbox even when
NM_0_8 is not defined. This should fix the layout problem.

CCBUG: 266268

M  +1    -1    applet/nmpopup.cpp     
M  +0    -2    applet/nmpopup.h     

http://commits.kde.org/networkmanagement/43d40035ebad6b038cbef76c471ab0750f5ce796
Comment 9 Christian (Fuchs) 2011-05-20 08:19:49 UTC
The new issue reported by me is fixed by 43d40035ebad6b038cbef76c471ab0750f5ce796, thanks for the good work. 

Kind regards

Christian