Try to adjust size automatically when needed.

BUG: 266268